# legend-simflow

./: #test.txt#  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TEST_COVERAGE_IMPROVEMENTS.md  Untitled.ipynb  __auto__  codecov.yml  output  pyproject.toml  results  simflow-config.yaml  simflow-config.yaml~
.github/workflows/: distribution.yml  main.yml
docs/: AGENTS.md  Makefile
docs/source/: conf.py  developer.md  index.md
docs/source/img/: rulegraph.mmd
docs/source/manual/: index.md  meta.md  output.md  pipeline.md  prod.md  setup.md  sites.md  tips.md
docs/tools/: generate_rule_docs.py  make_rulegraph.py
templates/: default.yaml  sschar25-pproc-nersc.yaml
tests/: AGENTS.md  conftest.py  test_aggregate.py  test_awkward.py  test_cli.py  test_commands.py  test_confine.py  test_dag.py  test_electronics_tuning.py  test_gamma_cascades.py  test_geometry.py  test_hpge_electronics_tuning.py  test_hpge_pars.py  test_metadata.py  test_nersc.py  test_optimise.py  test_partitioning.py  test_patterns.py  test_plot.py  test_profile.py  test_psl.py  test_reboost.py  test_spms_pars.py  test_superpulses.py  test_tcm.py  test_utils.py  test_warmup.py  test_workflow.py
tests/dummyprod/: rulegraph-config.yaml  simflow-config-l1000.yaml  simflow-config-l200.yaml  simflow-config-l200cfg09.yaml  simflow-config-nersc.yaml  simflow-config.yaml
tests/dummyprod/inputs/datasets/statuses/: l200-p02-r000-T%-all-config.yaml  l200-p02-r006-T%-all-config.yaml  l200-p03-r%-T%-all-config.yaml  l200-p15-r%-T%-all-config.yaml  validity.yaml
tests/dummyprod/inputs/hardware/configuration/channelmaps/: l200-p02-r%-T%-all-config.yaml
tests/dummyprod/inputs/hardware/detectors/germanium/crystals/: B99000.yaml  V02160.yaml  V05261.yaml  V99000.yaml
tests/dummyprod/inputs/hardware/detectors/germanium/diodes/: B00000A.yaml  B00000B.yaml  B99000A.yaml  C000RG1.yaml  C000RG2.yaml  C99000A.yaml  P00538A.yaml  P00573A.yaml  P99000A.yaml  V02160A.yaml  V05261B.yaml  V99000A.yaml
tests/dummyprod/inputs/simprod/: V05261B-4200V-hpge-drift-time-map.lh5
tests/dummyprod/inputs/simprod/config/: logging.yaml
tests/dummyprod/inputs/simprod/config/pars/geds/aoeresmod/: l200-p02-r%-T%-all-aoeresmod.yaml
tests/dummyprod/inputs/simprod/config/pars/geds/currmod/: l200-p02-r%-T%-all-currmod.yaml  l200-p03-r%-T%-all-currmod.yaml  validity.yaml
tests/dummyprod/inputs/simprod/config/pars/geds/opv/: validity.yaml
tests/dummyprod/inputs/simprod/config/pars/geds/psdcuts/: l200-p02-r%-T%-all-psdcuts.yaml
tests/dummyprod/inputs/simprod/config/pars/ssd/: adl-2016-temp-model.yaml
tests/dummyprod/inputs/simprod/config/tier/evt/l1000dsg01/: settings.yaml
tests/dummyprod/inputs/simprod/config/tier/evt/l200cfg01/: settings.yaml
tests/dummyprod/inputs/simprod/config/tier/hit/l1000dsg01/: settings.yaml
tests/dummyprod/inputs/simprod/config/tier/hit/l200cfg01/: settings.yaml
tests/dummyprod/l200data/v2.1.5/: config.json
tests/l200data/v2.1.0/: config.json
tests/l200data/v3.0.0/: dataflow-config.yaml
tests/scripts/: conftest.py  test_extract_hpge_aoemean_energy_dependence.py  test_extract_hpge_current_pulse_model.py  test_extract_hpge_electronics_model.py  test_extract_hpge_observables_models.py  test_extract_superpulses.py  test_get_aoe_energy_correction.py  test_make_hpge_drift_time_maps.py  test_make_hpge_pulse_shape_lib.py  test_make_realistic_hpge_psl.py  test_make_simstat_partition_file.py  test_make_source_pos_simconfig.py  test_plot_cvt_observables.py  test_tier_cvt.py  test_tier_evt.py  test_tier_hit.py  test_tier_opt.py  test_tier_pdf.py
workflow/: AGENTS.md  Snakefile
workflow/julia/LegendSimflow/: Project.toml
workflow/julia/LegendSimflow/src/: LegendSimflow.jl  init-julia-env.jl  make_hpge_drift_time_maps.jl
workflow/julia/LegendSimflow/src/libjl/: drift_time_helpers.jl
workflow/julia/LegendSimflow/test/: runtests.jl  test_lib.jl
workflow/profiles/default/: config.yaml
workflow/profiles/nersc/: config.yaml
workflow/profiles/nersc-batch/: config.yaml
workflow/profiles/nersc-compute/: config.yaml  profile.yaml
workflow/profiles/nersc-compute-slurm/: config.yaml  profile.yaml
workflow/profiles/nersc-interactive/: config.yaml
workflow/profiles/nersc-login/: config.yaml  profile.yaml
workflow/profiles/nersc-scratch/: config.yaml
workflow/rules/: aux.smk  cvt.smk  evt.smk  hit.smk  opt.smk  par.smk  pdf.smk  stp.smk  vtx.smk
workflow/src/LegendSimflow.jl/: Project.toml
workflow/src/LegendSimflow.jl/src/: LegendSimflow.jl  drift_time_helpers.jl  pulse_shape_sim_helpers.jl
workflow/src/LegendSimflow.jl/test/: test_lib.jl
workflow/src/legendsimflow/: __init__.py  aggregate.py  archive.py  awkward.py  cli.py  commands.py  confine.py  electronics_tuning.py  exceptions.py  gamma_cascades.py  geometry.py  hpge_electronics_tuning.py  hpge_pars.py  metadata.py  nersc.py  optimise.py  partitioning.py  patterns.py  plot.py  profile.py  psl.py  reboost.py  spms_pars.py  superpulses.py  tcm.py  utils.py  warmup.py
workflow/src/legendsimflow/scripts/: __init__.py  build_superpulses_from_data.py  crawl_legend_slow_control.py  extract_hpge_aoemean_energy_dependence.py  extract_hpge_current_pulse_model.py  extract_hpge_elec_response_model.py  extract_hpge_pulse_pars.py  fit_electronics_pars.py  get_aoe_energy_correction.py  get_electronics_pars.py  init-julia-env.jl  make_hpge_drift_time_maps.jl  make_hpge_ideal_pulse_shape_lib.jl  make_hpge_ideal_wf_map.jl  make_hpge_realistic_pulse_shape_lib.py  make_hpge_realistic_wf_map.py  make_sim_settings.py  make_simstat_partition_file.py  make_source_pos_simconfig.py  print_benchmark_stats.py  print_simflow_stats.py  print_simprod_stats.py
workflow/src/legendsimflow/scripts/libjl/: drift_time_helpers.jl
workflow/src/legendsimflow/scripts/pars/: extract_hpge_observables_models.py
workflow/src/legendsimflow/scripts/plots/: hpge_drift_time_maps.py  tier_cvt_observables.py  tier_hit_observables.py  tier_opt_observables.py  tier_stp_vertices.py
workflow/src/legendsimflow/scripts/tier/: cvt.py  evt.py  hit.py  opt.py  pdf.py
(+47 files in other folders)
