[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm[toml]>=7"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = [
    "LICENSE.md",
]
py-modules = []

[tool.setuptools.package-dir]
"" = "workflow/src"

[tool.setuptools.packages.find]
where = ["workflow/src"]

[tool.setuptools_scm]
write_to = "workflow/src/legendsimflow/_version.py"
[project]
name = "legend_simflow"
description = "Python package for processing LEGEND simulations"
authors = [
    {name = "Luigi Pertoldi", email = "gipert@pm.me"},
]
maintainers = [
    {name = "The LEGEND Collaboration"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    "awkward",
    "dbetto >=1.3.2",
    "h5py",
    "hist",
    "legend-dataflow-scripts >=0.2.2",
    "legend-pydataobj >=1.17.1",
    "legend-pygeom-l200 >=0.8",
    "legend-pygeom-tools >=0.2",
    "legend-pygeom-hpges >=0.9",
    "matplotlib",
    "mplhep",
    "numpy",
    "psutil",
    "pyg4ometry",
    "pygama >=2.3.5",
    "pylegendmeta >=1.3.5",
    "reboost >=0.10.3,<0.11",
    "revertex >=0.1.2",
    "snakemake >=9",
    "snakemake-storage-plugin-fs",
    "snakemake-executor-plugin-slurm",
]

[project.optional-dependencies]
test = [
    "legend_simflow",
    "pylegendtestdata",
    "pytest>=6",
    "pytest-cov>=3",
]
docs = [
    "sphinx>=7.0",
    "myst_parser>=0.13",
    "sphinx_inline_tabs",
    "sphinx_copybutton",
    "sphinx_autodoc_typehints",
    "furo>=2023.08.17",
]
all = [
    "legend_simflow[test,docs]",
    "pre-commit",
]

[project.scripts]
snakemake-nersc = "legendsimflow.cli:snakemake_nersc_cli"
snakemake-nersc-batch = "legendsimflow.cli:snakemake_nersc_batch_cli"

[tool.uv.workspace]
exclude = ["generated", "inputs", "software", "workflow"]

[tool.uv]
default-groups = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]

[tool.ruff]
src = ["workflow/src"]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PT011",    # `pytest.raises(ValueError)` is too broad
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.9"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
  "too-many-nested-blocks"
]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

# NOTE: non-conda dependencies will be installed from pypi (e.g. legend-dataflow-scripts)
[tool.pixi.pypi-dependencies]
legend-simflow = { path = ".", editable = true }

# FIXME: remove when https://github.com/prefix-dev/pixi/issues/532 is closed
[tool.pixi.dependencies]
# legend-simflow core dependencies
awkward = "*"
dbetto = ">=1.3.2,<1.4"
# legend-dataflow-scripts = "..."  # not on conda-forge
legend-pydataobj = ">=1.17.1"
legend-pygeom-l200 = ">=0.8,<0.9"
legend-pygeom-tools = ">=0.2,<0.3"
matplotlib = "*"
numpy = "*"
pylegendmeta = ">=1.3.5,<1.4"
psutil = "*"

# execution
snakemake = ">=9,<10"
snakemake-storage-plugin-fs = "*"
snakemake-executor-plugin-slurm = "*"

# tier hit
hist = "*"
mplhep = "*"
legend-pygeom-hpges = ">=0.9,<0.10"
pyg4ometry = "*"
pygama = ">=2.3.5,<2.4"
reboost = ">=0.10.3,<0.11"

# tier stp
remage = ">=0.19.5,<0.20"

# drift-time maps and other SSD.jl jobs
julia = ">=1.12,<1.13"
h5py = "*"
hdf5 = "*"
revertex = ">=0.1.2,<0.2"
