[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm[toml]>=7"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = [
    "LICENSE.md",
]
py-modules = []

[tool.setuptools.package-dir]
"" = "workflow/src"

[tool.setuptools.packages.find]
where = ["workflow/src"]

[tool.setuptools_scm]
write_to = "workflow/src/legendsimflow/_version.py"
[project]
name = "legend_simflow"
description = "Python package for processing LEGEND simulations"
authors = [
    {name = "Luigi Pertoldi", email = "gipert@pm.me"},
]
maintainers = [
    {name = "The LEGEND Collaboration"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    "awkward",
    "dbetto >=1.3.2",
    "h5py",
    "hist",
    "legend-dataflow-scripts >=0.3.0a5",
    "legend-lh5io >=0.2",
    "legend-pydataobj >=2",
    "legend-pygeom-l200 >=0.8.3",
    "legend-pygeom-tools >=0.2",
    "legend-pygeom-hpges >=0.9",
    "matplotlib",
    "mplhep >=1.0",
    "numpy",
    "psutil",
    "pyg4ometry",
    "dspeed >= 2.1.4",
    "pygama >=2.3.6",
    "pylegendmeta >=1.4.4",
    "pyyaml",
    "reboost >=0.10.3,<0.11",
    "revertex >=0.1.2",
    "ruamel.yaml",
    "snakemake >=9.19,<9.20",
    "snakemake-argparse-bridge >=0.2.0",
    "snakemake-storage-plugin-fs",
    "snakemake-executor-plugin-slurm",
    "snakemake-logger-plugin-rich",
    "snakemake-logger-plugin-snkmt",
]

[project.optional-dependencies]
test = [
    "pylegendtestdata",
    "pytest>=6",
    "pytest-cov>=3",
]
docs = [
    "sphinx>=7.0",
    "myst_parser>=0.13",
    "sphinx_inline_tabs",
    "sphinx_copybutton",
    "sphinx_autodoc_typehints",
    "sphinxcontrib-mermaid",
    "furo>=2023.08.17",
]
all = [
    "legend_simflow[test,docs]",
    "pre-commit",
]

[project.scripts]
snakemake-nersc = "legendsimflow.cli:snakemake_nersc_cli"
snakemake-nersc-batch = "legendsimflow.cli:snakemake_nersc_batch_cli"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

# NOTE: non-conda dependencies will be installed from pypi (e.g. legend-dataflow-scripts)
[tool.pixi.pypi-dependencies]
legend-simflow = { path = ".", editable = true }

# FIXME: remove when https://github.com/prefix-dev/pixi/issues/532 is closed
[tool.pixi.dependencies]
# legend-simflow core dependencies
awkward = "*"
dbetto = ">=1.3.2,<1.4"
# legend-dataflow-scripts = "..."  # not on conda-forge
legend-lh5io = ">=0.2,<0.3"
legend-pydataobj = ">=2,<2.1"
legend-pygeom-l200 = ">=0.8.3,<0.9"
legend-pygeom-tools = ">=0.2,<0.3"
dspeed = ">=2.1.4,<2.2"
matplotlib = "*"
numpy = "*"
pylegendmeta = ">=1.4.4,<1.5"
psutil = "*"
pyyaml = "*"
"ruamel.yaml" = "*"

# execution
snakemake = ">=9.19,<9.20"
# snakemake-argparse-bridge = "..."  # not on conda-forge
snakemake-storage-plugin-fs = "*"
snakemake-executor-plugin-slurm = "*"
# snakemake-logger-plugin-rich = "..."  # not on conda-forge
snakemake-logger-plugin-snkmt = "*"

# tier hit
hist = "*"
mplhep = ">=1.0"
legend-pygeom-hpges = ">=0.9,<0.10"
pyg4ometry = "*"
pygama = ">=2.3.6,<2.4"
reboost = ">=0.10.3,<0.11"

# tier stp
remage = ">=0.19.5,<0.20"

# drift-time maps and other SSD.jl jobs
julia = ">=1.12,<1.13"
h5py = "*"
hdf5 = "*"
revertex = ">=0.1.2,<0.2"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]
snakemake = { cmd = "snakemake", depends-on = ["precompile"] }
snakemake-nersc = { cmd = "snakemake-nersc", depends-on = ["precompile"] }
dry = { cmd = "snakemake --dry-run" }
touch = { cmd = "snakemake --touch" }

tier-opt = { cmd = "python -m legendsimflow.scripts.tier.opt" }
tier-hit = { cmd = "python -m legendsimflow.scripts.tier.hit" }
tier-evt = { cmd = "python -m legendsimflow.scripts.tier.evt" }
tier-cvt = { cmd = "python -m legendsimflow.scripts.tier.cvt" }
tier-pdf = { cmd = "python -m legendsimflow.scripts.tier.pdf" }

extract-hpge-obs-models = { cmd = "python -m legendsimflow.scripts.pars.extract_hpge_observables_models" }
extract-hpge-currmod = { cmd = "python -m legendsimflow.scripts.extract_hpge_current_pulse_model" }

[tool.pixi.tasks.prod]
cmd = "snakemake --verbose --logger {{ logger }} --workflow-profile workflow/profiles/{{ profile }}"
args = [
  {arg = "profile", default = "default"},
  {arg = "logger", default = "snkmt rich"},
]
depends-on = ["precompile"]

[tool.pixi.tasks.prodnodes]
# NOTE: snkmt does not work here because of race condition
cmd = "snakemake-nersc --nodes {{ n_nodes }}"
args = ["n_nodes"]
depends-on = ["precompile"]

[tool.pixi.tasks.prodsubmit]
# NOTE: no need to depend on precompile since this command calls `pixi run
# snakemake[-nersc]` internally
cmd = "snakemake-nersc-batch"

[tool.pixi.tasks.precompile]
cmd = "python -c 'from dspeed.processors import *; from lh5.compression import *; import matplotlib; import pygama; import pygeomhpges; import pygeomoptics; import pygeomtools; import reboost; import remage; import revertex' && touch .pixi/precompile.stamp"
outputs = [".pixi/precompile.stamp"]

[tool.pixi.feature.test.tasks]
test-python = { cmd = "pytest -vvv" }
init-julia-env = { cmd = "julia --project=workflow/src/LegendSimflow.jl workflow/src/legendsimflow/scripts/init-julia-env.jl && touch .pixi/julia-env.stamp", outputs = [".pixi/julia-env.stamp"] }
test-julia = { cmd = "julia --project=. -e 'using Pkg; Pkg.test()'", cwd = "workflow/src/LegendSimflow.jl", depends-on = ["init-julia-env"] }
test-julia-ci = { cmd = "julia --code-coverage=user --project=. -e 'using Pkg; Pkg.test(coverage=true)'", cwd = "workflow/src/LegendSimflow.jl", depends-on = ["init-julia-env"] }
test-python-pixi = { cmd = "pytest -vvv -m '(needs_remage or needs_julia) and not needs_nersc' --ignore=tests/test_workflow.py --cov=legendsimflow --cov-report=xml", depends-on = ["precompile", "init-julia-env"] }
test-l1000-workflow = { cmd = "pytest -s -m 'needs_remage and not needs_nersc' tests/test_workflow.py::test_l1000_workflow", depends-on = ["precompile"] }
test-l200-workflow = { cmd = "pytest -s -m needs_nersc", depends-on = ["precompile"] }
test = { depends-on = ["test-python", "test-julia"] }

[tool.uv.workspace]
exclude = ["generated", "inputs", "software", "workflow"]

[tool.uv]
default-groups = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config", "-m", "not needs_remage and not needs_nersc and not needs_julia"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:overflow encountered in divide:RuntimeWarning",
  "ignore:overflow encountered in cast:RuntimeWarning",
  "ignore:lgdo.lh5 has moved to its own package:DeprecationWarning",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]
markers = [
    "needs_remage: tests that require a remage installation",
    "needs_nersc: tests that can only run at NERSC (or sites with l200data access)",
    "needs_julia: tests that require a Julia installation with LegendSimflow.jl compiled",
]

[tool.ruff]
src = ["workflow/src"]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "D",        # pydocstyle
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PT011",    # `pytest.raises(ValueError)` is too broad
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
  "D1",       # Missing docstring — not enforced here
  "D203",     # Incompatible with D211 (no-blank-line-before-class)
  "D213",     # Incompatible with D212 (multi-line-summary-first-line)
  "D401",     # Imperative mood — conflicts with noun-phrase docstring style
]
isort.required-imports = ["from __future__ import annotations"]
pydocstyle.convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]

[tool.pylint]
py-version = "3.9"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
  "too-many-nested-blocks"
]
